[gd_scene load_steps=8 format=3 uid="uid://c7g3psq8th4oj"]

[ext_resource type="Script" path="res://Menu/Title.gd" id="1_5b5ep"]
[ext_resource type="Script" path="res://Menu/menu.gd" id="1_it7cn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbh1p"]
size = Vector2(175, 125)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_c7udv"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqd51"]
size = Vector2(47, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi8gu"]
size = Vector2(650, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8tx11"]
size = Vector2(650, 20)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -325.0
offset_right = 325.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_it7cn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 525.0
offset_right = 175.0
offset_bottom = 626.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = " Start"
alignment = 0

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = " Options"
alignment = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = " Quit"
alignment = 0

[node name="StaticBody2D" type="StaticBody2D" parent="VBoxContainer"]
position = Vector2(75, 50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/StaticBody2D"]
position = Vector2(-7.5, 7.25)
shape = SubResource("RectangleShape2D_wbh1p")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(225, 225)
physics_material_override = SubResource("PhysicsMaterial_c7udv")
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_5b5ep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_jqd51")

[node name="Label" type="Label" parent="RigidBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -13.0
offset_right = 23.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "PONG"

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(325, 650)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource("RectangleShape2D_oi8gu")

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2(0, 325)
rotation = 1.5708
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
shape = SubResource("RectangleShape2D_oi8gu")

[node name="Wall4" type="StaticBody2D" parent="."]
position = Vector2(650, 325)
rotation = 1.5708
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
shape = SubResource("RectangleShape2D_oi8gu")

[node name="Wall1" type="StaticBody2D" parent="."]
position = Vector2(325, 0)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
shape = SubResource("RectangleShape2D_8tx11")

[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="body_exited" from="RigidBody2D" to="RigidBody2D" method="_on_body_exited"]
